--- a/index.html
+++ b/index.html
@@ -13,5 +13,16 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="navigation">
+        <a href="#" data-text="HOME">HOME</a>
+        <a href="#" data-text="ABOUT">ABOUT</a>
+        <a href="#" data-text="PROJECTS">PROJECTS</a>
+        <a href="#" data-text="GALLERY">GALLERY</a>
+        <a href="#" data-text="BLOG">BLOG</a>
+        <a href="#" data-text="CONTACT">CONTACT</a>
+      </div>
+    </div>
+  </body>
 </html>
